<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/button_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_party_title"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="104dp"
            android:layout_marginTop="16dp"
            android:text="@string/title_create_party"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_message_party"
            style="@style/error_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="188dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/add_game_button"
            android:layout_width="153dp"
            android:layout_height="55dp"
            android:layout_marginStart="252dp"
            android:layout_marginTop="120dp"
            android:text="@string/add_game_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/game_name_input"
            android:layout_width="348dp"
            android:layout_height="41dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="128dp"
            android:hint="@string/input_game_stat"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_party_title" />

        <TextView
            android:id="@+id/longitude"
            style="@style/input_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:text="@string/longitude_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_party_input" />

        <EditText
            android:id="@+id/latitude_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="16dp"
            android:hint="@string/latitude_input"
            android:inputType="text"
            app:layout_constraintStart_toEndOf="@+id/longitude_input"
            app:layout_constraintTop_toBottomOf="@+id/latitude" />

        <EditText
            android:id="@+id/description_party_input"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="12dp"
            android:gravity="top"
            android:hint="@string/description_game_input"
            android:inputType="text|textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_party_input" />

        <EditText
            android:id="@+id/time_party_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="28dp"
            android:hint="@string/time_game_input"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/name_party_input"
            app:layout_constraintTop_toBottomOf="@+id/game_name_input" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="153dp"
            android:layout_height="55dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="128dp"
            android:text="@string/capture_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_party_input" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="153dp"
            android:layout_height="55dp"
            android:layout_marginStart="244dp"
            android:layout_marginTop="840dp"
            android:text="@string/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextureView
            android:id="@+id/picture_game"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="128dp"
            app:layout_constraintStart_toEndOf="@+id/capture_button"
            app:layout_constraintTop_toBottomOf="@+id/description_party_input" />

        <TextView
            android:id="@+id/latitude"
            style="@style/input_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:layout_marginTop="20dp"
            android:text="@string/latitude_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_party_input" />

        <EditText
            android:id="@+id/longitude_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:hint="@string/longitude_input"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/longitude" />

        <EditText
            android:id="@+id/name_party_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="28dp"
            android:hint="@string/name_party_input"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/game_name_input" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>