<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/button_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/button_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/error_message"
            style="@style/error_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/create_game_title"
            style="@style/title_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="88dp"
            android:layout_marginTop="28dp"
            android:text="@string/title_create_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/name_game_input"
            android:layout_width="353dp"
            android:layout_height="47dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="64dp"
            android:hint="@string/name_game_input"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_game_title" />

        <EditText
            android:id="@+id/number_player_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:hint="@string/number_player_input"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_game_input" />

        <EditText
            android:id="@+id/time_game_input"
            android:layout_width="160dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:hint="@string/time_game_input"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toEndOf="@+id/number_player_input"
            app:layout_constraintTop_toBottomOf="@+id/name_game_input" />

        <EditText
            android:id="@+id/description_game"
            android:layout_width="353dp"
            android:layout_height="100dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="4dp"
            android:gravity="top"
            android:hint="@string/description_game_input"
            android:inputType="text|textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_player_input" />

        <Button
            android:id="@+id/capture_button"
            android:layout_width="153dp"
            android:layout_height="55dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"
            android:text="@string/capture_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_game" />

        <TextureView
            android:id="@+id/picture_game"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/capture_button"
            app:layout_constraintTop_toBottomOf="@+id/description_game" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="153dp"
            android:layout_height="55dp"
            android:layout_marginStart="240dp"
            android:layout_marginTop="16dp"
            android:text="@string/save_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_game" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>