<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/image_game_historique"
        android:layout_width="89dp"
        android:layout_height="86dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/default_picture_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="200dp"
        android:layout_marginTop="32dp"
        android:text="@string/detail_button"
        app:layout_constraintStart_toEndOf="@+id/image_game_historique"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_add_player"
        android:layout_width="189dp"
        android:layout_height="44dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="100dp"
        android:text="@string/add_player_button"
        app:layout_constraintStart_toEndOf="@+id/image_game_historique"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/party_name_accueil"
        style="@style/text_style"
        android:layout_width="187dp"
        android:layout_height="37dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="16dp"
        android:text="@string/game_name_accueil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_player_accueil"
        style="@style/text_style"
        android:layout_width="187dp"
        android:layout_height="32dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="64dp"
        android:text="@string/number_player_accueil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>