<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/button_back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_player_title"
        style="@style/title_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="28dp"
        android:text="@string/title_add_player"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/error_message_party"
        style="@style/error_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_player_title" />

    <EditText
        android:id="@+id/name_player_input"
        android:layout_width="357dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="76dp"
        android:hint="@string/name_player_input"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_player_title" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="153dp"
        android:layout_height="55dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="28dp"
        android:text="@string/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score_input" />

    <EditText
        android:id="@+id/score_input"
        android:layout_width="357dp"
        android:layout_height="44dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:hint="@string/score_input"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_player_input" />

</androidx.constraintlayout.widget.ConstraintLayout>